--- a/index.html
+++ b/index.html
@@ -10,18 +10,83 @@
 </head>
 
 <body>
-    <div class="header">
-        <ul class="header_list">
-            <li class="item"><img class="image" src="https://www.freepnglogos.com/uploads/google-logo-png/file-google-logo-svg-wikimedia-commons-23.png" alt=""></li>
-            <li>Home</li>
-            <li>About</li>
-            <li>Conact</li>
-        </ul>
+    <header>
+        <div class="nav">
+            <div class="left">
+                <p id="logo">Header Logo</p>
+            </div>
+            <div class="right">
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="welcome">
+            <div class="left">
+                <h1 class="hero">This website is awesome</h1>
+                <p class="secondary">This website has some subtext that goes here under the main title. It's a smaller
+                    font and the
+                    color is lower contrast.</p>
+                <button class="secondary">Sign up</button>
+            </div>
+            <div class="right">
+                <div class="image">
+                    <p class="secondary">this is a placeholder for an image</p>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <h2>Some random information.</h2>
+        <div class="card-container secondary">
+            <div class="card">
+                <div class="square"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+
+            <div class="card">
+                <div class="square"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+
+            <div class="card">
+                <div class="square"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+
+            <div class="card">
+                <div class="square"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </main>
+
+    <div class="quote">
+        <em>This is an inspiring quote, or a testimonial from a customer.
+            Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it
+            looks nice.</em>
+        <p>- Thor, God of Thunder</p>
     </div>
 
+    <div class="sign-up">
+        <div class="container">
+            <div class="left">
+                <strong>Call to action! It's time!</strong>
+                <p class="secondary">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="right">
+                <button class="secondary">Sign up</button>
+            </div>
+        </div>
+    </div>
 
-    <section class="hero">hero</section>
-    <footer></footer>
+    <footer>
+        Copyright &copy; The Odin Project 2021
+    </footer>
 </body>
 
 </html>
